# web_scrapping_gemini

./: .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  report.json
.streamlit/: config.toml
output/: report.json
presentation/: slideshow.md
src/: report.json
src/data/: agents.py  prompt.md
src/model/: __init__.py  ai_response.py  article_item.py
src/service/: __init__.py  ai_service.py  tts_service.py
src/web/: app.py
